# ground-texture-sim

./: .clang-format  .coveragerc  .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  LICENSE.md  README.md  ____init_____8py_source.html  annotated.html  blender__interface_8py_source.html  classes.html  classground__texture__sim_1_1blender__interface_1_1BlenderInterface-members.html  classground__texture__sim_1_1blender__interface_1_1BlenderInterface.html  classground__texture__sim_1_1data__writer_1_1DataWriter-members.html  classground__texture__sim_1_1data__writer_1_1DataWriter.html  classground__texture__sim_1_1name__configuration_1_1NameConfigurator-members.html  classground__texture__sim_1_1name__configuration_1_1NameConfigurator.html  classground__texture__sim_1_1script__runner_1_1GroundTextureSim-members.html  classground__texture__sim_1_1script__runner_1_1GroundTextureSim.html  classground__texture__sim_1_1tests_1_1test__blender__interface_1_1TestBlenderInterface-members.html  classground__texture__sim_1_1tests_1_1test__blender__interface_1_1TestBlenderInterface.html  classground__texture__sim_1_1tests_1_1test__blender__interface_1_1TestBlenderInterface__inherit__graph.map  classground__texture__sim_1_1tests_1_1test__blender__interface_1_1TestBlenderInterface__inherit__graph.md5  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadConfig-members.html  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadConfig.html  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadConfig__coll__graph.map  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadConfig__inherit__graph.md5  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadTrajectory-members.html  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadTrajectory.html  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadTrajectory__inherit__graph.map  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestLoadTrajectory__inherit__graph.md5  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestParseArgs-members.html  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestParseArgs.html  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestParseArgs__coll__graph.map  classground__texture__sim_1_1tests_1_1test__configuration__loader_1_1TestParseArgs__coll__graph.md5  (+80 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy_pages.yml  display_coverage.yml  tests.yml  unit-tests.yml  verify-docs.yml  verify_docs.yml
config/: default.toml
data/: trajectory.txt
data_generation/: __init__.py  blender_interface.py  configuration_loader.py  configuration_setup.py  data_output.py  name_configuration.py
data_generation/tests/: test_blender_interface.py  test_configuration_loader.py  test_configuration_setup.py  test_data_output.py  test_name_configuration.py
example_setup/: environment.blend
example_setup/trajectories/: corners_1x1.txt  lawnmower_1x1.txt  loop_1x1.txt
ground_texture_sim/: __init__.py  blender_interface.py  configuration_loader.py  data_output.py  data_writer.py  name_configuration.py  script_runner.py  transforms.py
ground_texture_sim/tests/: test_blender_interface.py  test_configuration_loader.py  test_data_output.py  test_data_writer.py  test_name_configuration.py  test_transforms.py
include/: DataWriter.h  KeyboardController.h
include/ground_texture_sim/: DataSynchronizer.h  DataWriter.h  TrajectoryFollower.h  math.h  transform_math.h
launch/: generate_data.ign  keyboard.ign  simulate.ign  trajectory.ign
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
src/: DataWriter.cpp  KeyboardController.cpp  TrajectoryFollower.cpp  data_writer_node.cpp  follow_trajectory.cpp  keyboard_controller.cpp  keyboard_controller_node.cpp
src/ground_texture_sim/: DataSynchronizer.cpp  DataWriter.cpp  TrajectoryFollower.cpp  transform_math.cpp
test/: docker-compose.test.yml  test_data_synchronizer.cpp  test_data_writer.cpp  test_keyboard_controller.cpp  test_math.cpp  test_trajectory_follower.cpp  test_transform_math.cpp
trajectories/: loop_1x1.txt
world/: camera.sdf  ground.sdf  world.sdf
